--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+      .title {
+        font-family: 'Kode Mono', monospace;
+      }
+    </style>
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Kotnames by Interhyp</title>
+    <title class="title">C0D3N4M35 by Interhyp</title>
     <script defer="defer" src="/static/js/main.037558e1.js"></script>
     <link href="/static/css/main.f5cc1f68.css" rel="stylesheet" />
   </head>
