--- a/html/index.html
+++ b/html/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
-      .title {
-        font-family: 'Kode Mono', monospace;
-      }
-    </style>
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title class="title">C0D3N4M35 by Interhyp</title>
-    <script defer="defer" src="/static/js/main.037558e1.js"></script>
-    <link href="/static/css/main.f5cc1f68.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><style>@import url(https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap);.title{font-family:'Kode Mono',monospace}</style><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title class="title">C0D3N4M35 by Interhyp</title><script defer="defer" src="/static/js/main.874b2d86.js"></script><link href="/static/css/main.e8227133.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
